* Bug fix(es):
  * Fixed the utility to only process files with the prefix 'chr' in order to avoid picking up other files from the 'to_process' directory
  * Fixed the database_presence.rb to explicitly define tables rather than derive from the application.yml

== 0.3.0 2007-11-02

* Major enhancement(s):
  * Added the ability to auto-recognize when running on Windows and enable running as a Windows Service (FR#14856/14852)
* Minor enhancement(s):
  * Changed 'echi_ftp_delete:' default setting to 'Y'
  * A fair amount of internal code refactoring
* Bug fix(es):
  * Fixed bug so that the log file properly reports when a file is processed

== 0.3.1 2007-11-04

* Major enhancement(s):
* Minor enhancement(s):
  * Removed the need for the default install requirement, Ruby may now be installed anywhere on the Windows system (FR#15302)
  * Modified the return status when creating or manipulating a Windows service
  * Add the 'echi-converter status' command to check the status of a Windows service
* Bug fix(es):
  * Fixed bug #15293, the service now exists cleanly

== 0.3.2 2007-11-05

* Major enhancement(s):
* Minor enhancement(s):
  * FR#15361 - Added the ability to create echi_agents and then insert data from agname.dat
  * Added better error handling by giving a proper error when no project name is provided on a create command
  * Added requirement for 'uuidtools' gem for creating unique filenames for the agname.dat files since the Avaya outputs them the same
  * Capture and report the error when echi-converter create command fails
  * Provided an example ASCII CSV file in examples/ascii_csv for testing
* Bug fix(es):  
  * Bug ##15367 - Added to documentation that when using a Windows FTP server you must specify 'UNIX directory listing format'

== 0.3.3 2007-11-06

* Major enhancement(s):
* Minor enhancement(s):
  * Added error traps for ECHI_LOGS
* Bug fix(es):  
  * Fixed a bug where the utility was not properly deleting the files from the ftp server